# openapi-fmt

./: .bazelrc  BUILD.bazel  CHANGELOG.md  LICENSE  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: changelog.yaml  codecov.yaml
cmd/o-fmt/: BUILD.bazel  main.go  main_test.go
config/: BUILD.bazel  config.go  config_test.go
testdata/: api.yaml  remove_extensions_api.yaml
utils/: BUILD.bazel  error.go  remove.go  remove_test.go  split.go  split_test.go  utils_test.go
utils/testdata/: api.yaml  remove_extensions_api.yaml  split_api.yaml
